--- a/.github/workflows/update_nhanes_automatically.yml
+++ b/.github/workflows/update_nhanes_automatically.yml
@@ -13,7 +13,7 @@ env:
   # TARGET_PATH: target_alternate_path # uncomment to monitor a non default target branch
   THE_SERVER: ${{ github.server_url }}
   PATH_SOURCE_CHECKOUT: temp_folder
-  THE_SECRET: ${{ secrets.NHANES_SECRET || 'default_value' }}
+  THE_SECRET: ${{ secrets.NHANES_SECRET }}
 
 on: # Remove # below for non default branches
   workflow_dispatch:
