--- a/.github/workflows/update_nhanes_automatically.yml
+++ b/.github/workflows/update_nhanes_automatically.yml
@@ -8,8 +8,8 @@ env:
   USERNAME: ${{ github.actor }}
   ADDRESS_SUFFIX: users.noreply.github.com
   TOKEN_NAME: NHANES_SECRET # name of token defined in the target repo's settings, needed for private repos
-  # SOURCE_BRANCH: source_alternate_branch # uncomment to takes files from a non default source branch
-  # TARGET_BRANCH: target_alternate_branch # uncomment to monitor a non default target branch
+  SOURCE_BRANCH: main # uncomment to takes files from a non default source branch
+  TARGET_BRANCH: main # uncomment to monitor a non default target branch
   # TARGET_PATH: target_alternate_path # uncomment to monitor a non default target branch
   THE_SERVER: ${{ github.server_url }}
   PATH_SOURCE_CHECKOUT: temp_folder
