--- a/.github/workflows/update_nhanes_automatically.yml
+++ b/.github/workflows/update_nhanes_automatically.yml
@@ -1,6 +1,6 @@
 name: Pull Files from Another Repository on Push
 env:
-  SOURCE_REPO: owner/repo
+  SOURCE_REPO: aminadibi/nhanes
   AUTOMATIC_MONITOR: true
   FILES: "nhanes_2007_2012.rds" # seperate multiple entries with ,
   FILES_NEW: "nhanes_2007_2012.rds" # seperate multiple entries with ,
