--- a/.github/workflows/update_nhanes_automatically.yml
+++ b/.github/workflows/update_nhanes_automatically.yml
@@ -2,8 +2,8 @@ name: Pull Files from Another Repository on Push
 env:
   SOURCE_REPO: aminadibi/nhanes
   AUTOMATIC_MONITOR: true
-  FILES: "nhanes_2007_2012.rds" # seperate multiple entries with ,
-  FILES_NEW: "nhanes_2007_2012.rds" # seperate multiple entries with ,
+  FILES: "nhanes*.rds, nhanes*.csv" # seperate multiple entries with ,
+  FILES_NEW: "nhanes*.rds, nhanes*.csv" # seperate multiple entries with ,
   #EXTRA: mv LICENSE LICENSE_some_repo # do an extra command like renaming
   USERNAME: ${{ github.actor }}
   ADDRESS_SUFFIX: users.noreply.github.com
